@@ -8,7 +8,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import org.apache.derby.impl.store.raw.data.SyncOnCommit;
 import org.magic.api.beans.Announce;
 import org.magic.api.beans.Announce.STATUS;
 import org.magic.api.beans.MagicCard;
@@ -26,11 +25,16 @@ import org.magic.api.beans.technical.GedEntry;
 import org.magic.api.beans.technical.audit.DAOInfo;
 import org.magic.api.interfaces.MTGSerializable;
 import org.magic.api.interfaces.abstracts.extra.AbstractKeyValueDao;
+import org.magic.services.PluginRegistry;
 import org.magic.services.TechnicalServiceManager;
 import org.magic.services.tools.CryptoUtils;
 import org.magic.services.tools.IDGenerator;
+import org.magic.services.tools.ImageTools;
 import org.magic.services.tools.POMReader;
 
+import com.google.gson.JsonObject;
+
+import io.lettuce.core.ClientOptions;
 import io.lettuce.core.RedisClient;
 import io.lettuce.core.api.StatefulRedisConnection;
 import io.lettuce.core.api.sync.RedisCommands;
@@ -41,10 +45,9 @@ import io.lettuce.core.event.command.CommandSucceededEvent;
 
 public class RedisDAO extends AbstractKeyValueDao {
 
-	RedisCommands<String, String> syncCommands;
-	StatefulRedisConnection<String, String> connection;
-	RedisClient redisClient;
-	
+	private RedisCommands<String, String> redisCommand;
+	private StatefulRedisConnection<String, String> connection;
+	private RedisClient redisClient;
 	
 	@Override
 	public STATUT getStatut() {
@@ -53,7 +56,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 	
 	@Override
 	public Long incr(Class<?> c) {
-		return syncCommands.incr("incr:"+c.getSimpleName());
+		return redisCommand.incr("incr:"+c.getSimpleName());
 	}
 	
 	@Override
@@ -94,8 +97,15 @@ public class RedisDAO extends AbstractKeyValueDao {
 		};
 		
 		redisClient.addListener(listener);
+		
+		redisClient.setOptions(ClientOptions.builder()
+											.autoReconnect(true)
+											.pingBeforeActivateConnection(true)
+											.build()
+											);
+		
 		connection = redisClient.connect();
-		syncCommands = connection.sync();
+		redisCommand = connection.sync();
 		
 		initDefaultData();
 		
@@ -133,33 +143,33 @@ public class RedisDAO extends AbstractKeyValueDao {
 	
 	@Override
 	public List<String> listEditionsIDFromCollection(MagicCollection collection) throws SQLException {
-		return syncCommands.keys(key(collection)+SEPARATOR+"*").stream().map(s->s.substring(s.lastIndexOf(SEPARATOR)+1)).toList();
+		return redisCommand.keys(key(collection)+SEPARATOR+"*").stream().map(s->s.substring(s.lastIndexOf(SEPARATOR)+1)).toList();
 	}
 	
 	@Override
 	public void saveCollection(MagicCollection c) throws SQLException {
-		syncCommands.sadd(KEY_COLLECTIONS,c.getName());
+		redisCommand.sadd(KEY_COLLECTIONS,c.getName());
 	}
 	
 	@Override
 	public List<MagicCollection> listCollections() throws SQLException {
-		return syncCommands.smembers(KEY_COLLECTIONS).stream().map(MagicCollection::new).toList();
+		return redisCommand.smembers(KEY_COLLECTIONS).stream().map(MagicCollection::new).toList();
 	}
 	
 	@Override
 	public void removeCollection(MagicCollection c) throws SQLException {
-		syncCommands.srem(KEY_COLLECTIONS, c.getName());
+		redisCommand.srem(KEY_COLLECTIONS, c.getName());
 	}
 	
 	@Override
 	public void saveCard(MagicCard card, MagicCollection collection) throws SQLException {
-		syncCommands.sadd(key(collection,card), serialiser.toJson(card));
+		redisCommand.sadd(key(collection,card), serialiser.toJson(card));
 	}
 	
 
 	@Override
 	public int getCardsCount(MagicCollection c, MagicEdition me) throws SQLException {
-		return syncCommands.scard(key(c,me)).intValue();
+		return redisCommand.scard(key(c,me)).intValue();
 	}
 
 	@Override
@@ -167,9 +177,9 @@ public class RedisDAO extends AbstractKeyValueDao {
 		
 		var map = new HashMap<String,Integer>();
 		
-		syncCommands.keys(key(c)+SEPARATOR+"*").forEach(s->{
+		redisCommand.keys(key(c)+SEPARATOR+"*").forEach(s->{
 			var idSet = s.substring(s.lastIndexOf(SEPARATOR)+1);
-			var count = syncCommands.scard(s).intValue();
+			var count = redisCommand.scard(s).intValue();
 			
 			map.put(idSet, count);
 		});
@@ -184,8 +194,8 @@ public class RedisDAO extends AbstractKeyValueDao {
 		
 		var ret = new ArrayList<MagicDeck>();
 		
-		syncCommands.keys(KEY_DECK+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), MagicDeck.class);
+		redisCommand.keys(KEY_DECK+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), MagicDeck.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -195,7 +205,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 	
 	@Override
 	public void deleteDeck(MagicDeck d) throws SQLException {
-		syncCommands.del(key(d));
+		redisCommand.del(key(d));
 	}
 
 	
@@ -204,29 +214,29 @@ public class RedisDAO extends AbstractKeyValueDao {
 		if(d.getId()<0)
 			d.setId(incr(MagicDeck.class).intValue());
 		
-		syncCommands.set(key(d), serialiser.toJson(d));
+		redisCommand.set(key(d), serialiser.toJson(d));
 		return d.getId();
 	}
 
 	@Override
 	public MagicDeck getDeckById(Integer id) throws SQLException {
-		return serialiser.fromJson(syncCommands.get(KEY_DECK+SEPARATOR+id),MagicDeck.class);
+		return serialiser.fromJson(redisCommand.get(KEY_DECK+SEPARATOR+id),MagicDeck.class);
 	}
 
 	@Override
 	public List<MagicCard> listCardsFromCollection(MagicCollection collection, MagicEdition me) throws SQLException {
-		return syncCommands.smembers(key(collection,me)).stream().map(s->serialiser.fromJson(s, MagicCard.class)).collect(Collectors.toList());
+		return redisCommand.smembers(key(collection,me)).stream().map(s->serialiser.fromJson(s, MagicCard.class)).collect(Collectors.toList());
 	}
 	
 	
 	@Override
 	public List<MagicCard> listCardsFromCollection(MagicCollection collection) throws SQLException {
-		return syncCommands.smembers(key(collection)).stream().map(s->serialiser.fromJson(s, MagicCard.class)).toList();
+		return redisCommand.smembers(key(collection)).stream().map(s->serialiser.fromJson(s, MagicCard.class)).toList();
 	}
 
 	@Override
 	public void removeEdition(MagicEdition ed, MagicCollection col) throws SQLException {
-		syncCommands.del(key(col,ed));
+		redisCommand.del(key(col,ed));
 	}
 
 	
@@ -244,7 +254,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 	
 	@Override
 	public void moveEdition(MagicEdition ed, MagicCollection from, MagicCollection to) throws SQLException {
-		syncCommands.rename(key(from,ed), key(to,ed));
+		redisCommand.rename(key(from,ed), key(to,ed));
 	}
 
 	
@@ -254,13 +264,13 @@ public class RedisDAO extends AbstractKeyValueDao {
 			mcs.setId(incr(MagicCardStock.class).intValue());
 		
 		mcs.setUpdated(false);
-		syncCommands.set(key(mcs), serialiser.toJson(mcs));
+		redisCommand.set(key(mcs), serialiser.toJson(mcs));
 	}
 
 	@Override
 	public void deleteStock(List<MagicCardStock> state) throws SQLException {
 			for(var d : state)
-				syncCommands.del(key(d));
+				redisCommand.del(key(d));
 
 	}
 
@@ -269,8 +279,8 @@ public class RedisDAO extends AbstractKeyValueDao {
 		
 		var ret = new ArrayList<MagicCardStock>();
 		
-		syncCommands.keys(KEY_STOCKS+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), MagicCardStock.class);
+		redisCommand.keys(KEY_STOCKS+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), MagicCardStock.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -283,8 +293,8 @@ public class RedisDAO extends AbstractKeyValueDao {
 	public List<SealedStock> listSealedStocks() throws SQLException {
 		var ret = new ArrayList<SealedStock>();
 		
-		syncCommands.keys(KEY_SEALED+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), SealedStock.class);
+		redisCommand.keys(KEY_SEALED+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), SealedStock.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -298,18 +308,18 @@ public class RedisDAO extends AbstractKeyValueDao {
 			mcs.setId(incr(SealedStock.class).intValue());
 		
 		mcs.setUpdated(false);
-		syncCommands.set(key(mcs), serialiser.toJson(mcs));
+		redisCommand.set(key(mcs), serialiser.toJson(mcs));
 
 	}
 
 	@Override
 	public void deleteStock(SealedStock state) throws SQLException {
-		syncCommands.del(key(state));
+		redisCommand.del(key(state));
 	}
 
 	@Override
 	public SealedStock getSealedStockById(Long id) throws SQLException {
-			return serialiser.fromJson(syncCommands.get(KEY_SEALED+SEPARATOR+id), SealedStock.class);
+			return serialiser.fromJson(redisCommand.get(KEY_SEALED+SEPARATOR+id), SealedStock.class);
 	}
 
 
@@ -317,8 +327,8 @@ public class RedisDAO extends AbstractKeyValueDao {
 	public List<Transaction> listTransactions() throws SQLException {
 		var ret = new ArrayList<Transaction>();
 		
-		syncCommands.keys(KEY_TRANSACTIONS+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), Transaction.class);
+		redisCommand.keys(KEY_TRANSACTIONS+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), Transaction.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -331,21 +341,21 @@ public class RedisDAO extends AbstractKeyValueDao {
 		if(t.getId()<0)
 			t.setId(incr(Transaction.class).intValue());
 		
-		syncCommands.set(key(t), serialiser.toJson(t));
+		redisCommand.set(key(t), serialiser.toJson(t));
 		
 		return t.getId();
 	}
 
 	@Override
 	public void deleteTransaction(Transaction t) throws SQLException {
-		syncCommands.del(key(t));
+		redisCommand.del(key(t));
 	}
 	
 
 
 	@Override
 	public Transaction getTransaction(Long id) throws SQLException {
-		return serialiser.fromJson(syncCommands.get(KEY_TRANSACTIONS+SEPARATOR+id), Transaction.class);
+		return serialiser.fromJson(redisCommand.get(KEY_TRANSACTIONS+SEPARATOR+id), Transaction.class);
 	}
 
 
@@ -354,8 +364,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 		if(c.getId()<0)
 			c.setId(incr(Contact.class).intValue());
 		
-		
-		syncCommands.set(key(c), serialiser.toJson(c));
+		redisCommand.set(key(c), serialiser.toJson(c));
 		
 		return c.getId();
 	}
@@ -363,22 +372,22 @@ public class RedisDAO extends AbstractKeyValueDao {
 
 	@Override
 	public void deleteContact(Contact contact) throws SQLException {
-		syncCommands.del(key(contact));
+		redisCommand.del(key(contact));
 
 	}
 
 
 	@Override
 	public Contact getContactById(int id) throws SQLException {
-		return serialiser.fromJson(syncCommands.get(KEY_CONTACTS+SEPARATOR+id), Contact.class);
+		return serialiser.fromJson(redisCommand.get(KEY_CONTACTS+SEPARATOR+id), Contact.class);
 	}
 
 	@Override
 	public List<Contact> listContacts() throws SQLException {
 		var ret = new ArrayList<Contact>();
 		
-		syncCommands.keys(KEY_CONTACTS+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), Contact.class);
+		redisCommand.keys(KEY_CONTACTS+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), Contact.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -390,8 +399,8 @@ public class RedisDAO extends AbstractKeyValueDao {
 	@Override
 	public List<MagicCardAlert> listAlerts() {
 		var ret = new ArrayList<MagicCardAlert>();
-		syncCommands.keys(KEY_ALERTS+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), MagicCardAlert.class);
+		redisCommand.keys(KEY_ALERTS+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), MagicCardAlert.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -401,7 +410,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 
 	@Override
 	public void saveAlert(MagicCardAlert alert) throws SQLException {
-		syncCommands.set(key(alert), serialiser.toJson(alert));
+		redisCommand.set(key(alert), serialiser.toJson(alert));
 
 	}
 
@@ -413,15 +422,15 @@ public class RedisDAO extends AbstractKeyValueDao {
 
 	@Override
 	public void deleteAlert(MagicCardAlert alert) throws SQLException {
-		syncCommands.del(key(alert));
+		redisCommand.del(key(alert));
 	}
 	
 
 	@Override
 	public List<MagicNews> listNews() {
 		var ret = new ArrayList<MagicNews>();
-		syncCommands.keys(KEY_NEWS+SEPARATOR+"*").forEach(s->{
-			var d=  serialiser.fromJson(syncCommands.get(s), MagicNews.class);
+		redisCommand.keys(KEY_NEWS+SEPARATOR+"*").forEach(s->{
+			var d=  serialiser.fromJson(redisCommand.get(s), MagicNews.class);
 			ret.add(d);
 			notify(d);
 		});
@@ -431,7 +440,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 
 	@Override
 	public void deleteNews(MagicNews n) throws SQLException {
-		syncCommands.del(key(n));
+		redisCommand.del(key(n));
 
 	}
 
@@ -440,14 +449,14 @@ public class RedisDAO extends AbstractKeyValueDao {
 		if(a.getId()<0)
 			a.setId(incr(Announce.class).intValue());
 		
-		syncCommands.set(key(a), serialiser.toJson(a));
+		redisCommand.set(key(a), serialiser.toJson(a));
 	}
 
 	
 
 	@Override
 	public Announce getAnnounceById(int id) throws SQLException {
-		return serialiser.fromJson(syncCommands.get(KEY_ANNOUNCES+SEPARATOR+id), Announce.class);
+		return serialiser.fromJson(redisCommand.get(KEY_ANNOUNCES+SEPARATOR+id), Announce.class);
 	}
 
 	@Override
@@ -455,14 +464,14 @@ public class RedisDAO extends AbstractKeyValueDao {
 		if(a.getId()<0)
 			a.setId(incr(Announce.class).intValue());
 		
-		syncCommands.set(key(a), serialiser.toJson(a));
+		redisCommand.set(key(a), serialiser.toJson(a));
 		
 		return a.getId();
 	}
 
 	@Override
 	public void deleteAnnounce(Announce a) throws SQLException {
-		syncCommands.del(key(a));
+		redisCommand.del(key(a));
 
 	}
 
@@ -472,13 +481,11 @@ public class RedisDAO extends AbstractKeyValueDao {
 		saveOrUpdateContact(c);
 	}
 
-	
-
 	//TODO found how to remove element from sets
 	@Override
 	public void removeCard(MagicCard mc, MagicCollection collection) throws SQLException {
 			var k = key(collection,mc.getCurrentSet());
-			syncCommands.srem(k, serialiser.toJson(mc));
+			redisCommand.srem(k, serialiser.toJson(mc));
 	}
 
 
@@ -486,7 +493,7 @@ public class RedisDAO extends AbstractKeyValueDao {
 	
 	@Override
 	public List<Transaction> listTransactions(Contact c) throws SQLException {
-		 return listTransactions().stream().filter(t->t.getContact().getId()==c.getId()).collect(Collectors.toList());
+		 return listTransactions().stream().filter(t->t.getContact().getId()==c.getId()).toList();
 	}
 
 
@@ -577,35 +584,51 @@ public class RedisDAO extends AbstractKeyValueDao {
 
 	@Override
 	public <T extends MTGSerializable> List<GedEntry<T>> listEntries(String classename, String fileName) throws SQLException {
-		// TODO Auto-generated method stub
-		return  new ArrayList<>();
+		List<GedEntry<T>> ret = new ArrayList<>();
+		
+		return  ret;
 	}
 
 	@Override
 	public <T extends MTGSerializable> boolean deleteEntry(GedEntry<T> gedItem) throws SQLException {
-		// TODO Auto-generated method stub
-		return false;
+		return redisCommand.del(key(gedItem))>0;
 	}
 
 	@Override
 	public <T extends MTGSerializable> boolean storeEntry(GedEntry<T> gedItem) throws SQLException {
-		var ret = syncCommands.set(key(gedItem), gedItem.toJson().toString());
+		var ret = redisCommand.set(key(gedItem), gedItem.toJson().toString());
 		return ret.equalsIgnoreCase("ok");
 		
 	}
 
 
 	@Override
-	public <T extends MTGSerializable> GedEntry<T> readEntry(String classe, String idInstance, String fileName)
-			throws SQLException {
-		// TODO Auto-generated method stub
-		return null;
+	public <T extends MTGSerializable> GedEntry<T> readEntry(String classe, String idInstance, String fileName) throws SQLException {
+		var ged = new GedEntry<T>();
+		var jo = serialiser.fromJson(redisCommand.get(KEY_GED+SEPARATOR+classe+SEPARATOR+idInstance),JsonObject.class);
+		ged.setId(idInstance);
+		ged.setName(fileName);
+		ged.setContent(CryptoUtils.fromBase64(jo.get("data").getAsString()));
+		
+		if(jo.get("md5")!=null && !CryptoUtils.getMD5(ged.getContent()).equals(jo.get("md5").getAsString()))
+			throw new SQLException("MD5 Error for " + fileName +" : " + CryptoUtils.getMD5(ged.getContent()) + " " + jo.get("md5").getAsString());
+
+		
+		ged.setIsImage(ImageTools.isImage(ged.getContent()));
+		
+		try {
+			ged.setClasse(PluginRegistry.inst().loadClass(classe));
+		} catch (ClassNotFoundException e) {
+			logger.error(e);
+		}
+
+		
+		return ged;
 	}
 
 	@Override
 	public <T extends MTGSerializable> List<GedEntry<T>> listAllEntries() throws SQLException {
-		// TODO Auto-generated method stub
-		return  new ArrayList<>();
+		return new ArrayList<>();
 	}
 	
 	@Override
